--- a/vue.css
+++ b/vue.css
@@ -297,33 +297,33 @@ h6 code {
 }
 
 h1 {
-    padding-bottom: .3em;
-    font-size: 2.25rem;
-    line-height: 1.2;
+    padding-bottom: .4rem;
+    font-size: 2.2rem;
+    line-height: 1.3;
 }
 
 h2 {
     font-size: 1.75rem;
     line-height: 1.225;
-    margin: 25px 0px 15px 0px;
+    margin: 35px 0px 15px 0px;
 }
 
 h3 {
     font-size: 1.5rem;
     line-height: 1.43;
-    margin: 16px 0px 8px 0px;
+    margin: 20px 0px 7px 0px;
 }
 
 h4 {
-    font-size: 1.25em;
+    font-size: 1.25rem;
 }
 
 h5 {
-    font-size: 1em;
+    font-size: 1rem;
 }
 
 h6 {
-    font-size: 1em;
+    font-size: 1rem;
     color: #777;
 }
 
@@ -466,17 +466,17 @@ table tr td:last-child {
 }
 
 #write .CodeMirror-gutters {
-    border-right: 1px solid #ddd;
+    border-right: none;
 }
 
 #write .md-fences {
-    border: 1px solid #F5F5F5;
+    border: 1px solid #F4F4F4;
     -webkit-font-smoothing: initial;
     margin: 0.8rem 0 !important;
-    padding: 0.3rem 0.2rem !important;
+    padding: 0.3rem 0rem !important;
     background-color: #F8F8F8 !important;
     border-radius: 2px;
-    font-family: Consolas, Source Sans Pro, Monaco, courier, monospace;
+    font-family: Consolas, Source Sans Pro, Monaco, courier, monospace !important;
     font-size: 0.85rem;
     word-wrap: normal;
 }
@@ -485,17 +485,14 @@ table tr td:last-child {
     padding-left: 12px;
 }
 
-#write .md-fences,
-code,
-tt {
+#write code, tt {
+    margin: 0 2px;
+    padding: 2px 4px;
+    border-radius: 2px;
+    font-family: Consolas, Source Sans Pro, Monaco, courier, monospace !important;
+    font-size: 0.85rem;
     color: #e96900;
     background-color: #f8f8f8;
-    border-radius: 2px;
-    margin: 0 2px;
-    font-family: Consolas, Source Sans Pro, Monaco, courier, monospace !important;
-    /* font-family: Consolas, "Liberation Mono", Courier, monospace !important; */
-    padding: 2px 4px;
-    font-size: 0.85rem;
 }
 
 #write .md-footnote {
