improve cursor color in code fence

--- a/src/vue_dark_fork.css
+++ b/src/vue_dark_fork.css
@@ -855,3 +855,13 @@ html{
 .modal-dialog {
     color: #000;
 }
+
+/* cursor */
+.CodeMirror.cm-s-typora-default div.CodeMirror-cursor {
+    border-left: 5px solid #42b983;
+}
+
+.CodeMirror div.CodeMirror-cursor {
+    border-left: 5px solid #42b983;
+    z-index: 3;
+}
