--- a/vue-dark-snappy.css
+++ b/vue-dark-snappy.css
@@ -108,7 +108,7 @@
 }
 
 .cm-constant {
-    color: #92c4e8
+    color: #42b983
 }
 
 .cm-defined {
@@ -126,6 +126,9 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket {
     /* --side-bar-bg-color: #fff; */
     --control-text-color: #ffffff;
     /* --control-text-color: #777; */
+    /* --select-text-bg-color: hsla(153, 47%, 49%, 0.5); */
+    --select-text-bg-color: hsl(153, 47%, 40%);
+    --select-text-font-color: #fff;
 }
 
 /* cyrillic-ext */
@@ -720,11 +723,11 @@ table tr td:last-child {
     font-weight: bold;
     font-size: 0.85rem;
     color: #f3b37f;
-    background-color: hsl(0, 0%, 10%);
+    background-color: hsla(0, 0%, 0%, 0.2);
 }
 
 #write .md-footnote {
-    background-color: hsl(0, 0%, 10%);
+    background-color: hsla(0, 0%, 0%, 0.2);
     color: #f3b37f;
 }
 
@@ -873,7 +876,7 @@ footer {
 }
 
 .md-lang {
-    color: #b4654d;
+    color: #42b983;
 }
 
 .html-for-mac .context-menu {
@@ -987,6 +990,12 @@ html{
 .CodeMirror div.CodeMirror-cursor {
     border-left: 5px solid #42b983;
     z-index: 3;
+}
+
+/* selected text */
+.CodeMirror-selecte {
+    /* background-color: hsla(153, 47%, 49%, 0.5) !important; */
+    /* color: #fff !important; */
 }/* snappy scheme */
 .cm-s-inner .cm-keyword {
     color: #f66153;
