--- a/vue.css
+++ b/vue.css
@@ -284,7 +284,8 @@ body {
 }
 
 #write ol li {
-    padding-left: 0.5rem;
+    /*padding-left: 0.5rem;*/
+    text-indent: 0.5rem;
 }
 
 #write > ul:first-child,
