Fix blockquote style
On a text is align right and it in blockquote
It is close to blockquote's right border
Now, I add padding-right to blockquote

--- a/vue.css
+++ b/vue.css
@@ -494,7 +494,7 @@ ol:last-child {
 
 blockquote {
     border-left: 4px solid #42b983;
-    padding: 10px 0 10px 15px;
+    padding: 10px 15px;
     color: #777;
     background-color: rgba(66, 185, 131, .1);
 }
