--- a/vue-dark.css
+++ b/vue-dark.css
@@ -2,12 +2,12 @@
 
 .md-rawblock-control:not(.md-rawblock-tooltip) {
     background: #555;
-    color: #fff;
+    color: #eeeeee;
 }
 
 .md-rawblock-on-edit>.md-rawblock-tooltip, .md-rawblock:hover>.md-rawblock-container, .md-rawblock:hover>.md-rawblock-tooltip {
     background: #555;
-    color: #fff;
+    color: #eeeeee;
 }
 
 /* code color */
@@ -133,16 +133,18 @@ div.CodeMirror span.CodeMirror-matchingbracket {
 
 div.CodeMirror span.CodeMirror-nonmatchingbracket {
     color: #ff9090
-}:root {
-    --side-bar-bg-color: #343333;
-    /* --side-bar-bg-color: #fff; */
-    --control-text-color: #ffffff;
+}
+
+:root {
+    --side-bar-bg-color: #1d1d1d;
+    /* --side-bar-bg-color: #eeeeee; */
+    --control-text-color: #aaaaaa;
     /* --control-text-color: #777; */
     /* --select-text-bg-color: hsla(153, 47%, 49%, 0.5); */
     --select-text-bg-color: hsl(153, 47%, 40%);
-    --select-text-font-color: #fff;
+    --select-text-font-color: #aaaaaa;
     --bg-color: #1d1d1d;
-    --item-hover-bg-color: #fff;
+    --item-hover-bg-color: #eeeeee;
 }
 
 /* cyrillic-ext */
@@ -403,7 +405,7 @@ html {
 
 body {
     font-family: Source Sans Pro, Helvetica Neue, Arial, sans-serif !important;
-    color: #ffffff;
+    color: #eeeeee;
     background-color: #1f1f1f;
     -webkit-font-smoothing: antialiased;
     line-height: 1.6rem;
@@ -624,7 +626,7 @@ ol:last-child {
 blockquote {
     border-left: 4px solid #42b983;
     padding: 10px 0px 10px 15px;
-    color: #fff;
+    color: #eeeeee;
     background-color: rgba(66, 185, 131, .1);
 }
 
@@ -941,7 +943,7 @@ footer {
 }
 
 .file-node-content:hover {
-    color: #fff;
+    color: #eeeeee;
 }
 
 html{
@@ -959,7 +961,7 @@ html{
 }
 
 .dropdown-menu>li>a {
-    color: #fff;
+    color: #eeeeee;
 }
 
 .autoComplt-hint {
@@ -985,7 +987,7 @@ html{
 /* } */
 
 .auto-suggest-container li:hover {
-    color: #fff !important;
+    color: #eeeeee !important;
     background-color: #42b983 !important;
     /* text-align: right !important; */
 }
@@ -1012,5 +1014,5 @@ html{
 /* selected text */
 /* .CodeMirror-selecte { */
     /* background-color: hsla(153, 47%, 49%, 0.5) !important; */
-    /* color: #fff !important; */
+    /* color: #eeeeee !important; */
 /* } */
